# kubeflow-sdk-v2

./: .gitignore  katib-test.py  main.py  pyproject.toml  torch-test.py
kubeflow/optimizer/: __init__.py  api_client.py  katib_api_pb2_grpc.py  main.py  pyproject.toml  rest.py
kubeflow/optimizer/api/: katib_client.py  katib_client_test.py  report_metrics.py  report_metrics_test.py  search.py
kubeflow/optimizer/models/: __init__.py  v1beta1_algorithm_setting.py  v1beta1_algorithm_spec.py  v1beta1_collector_spec.py  v1beta1_config_map_source.py  v1beta1_early_stopping_rule.py  v1beta1_early_stopping_setting.py  v1beta1_early_stopping_spec.py  v1beta1_experiment.py  v1beta1_experiment_condition.py  v1beta1_experiment_list.py  v1beta1_experiment_spec.py  v1beta1_experiment_status.py  v1beta1_feasible_space.py  v1beta1_file_system_path.py  v1beta1_filter_spec.py  v1beta1_graph_config.py  v1beta1_metric.py  v1beta1_metric_strategy.py  v1beta1_metrics_collector_spec.py  v1beta1_nas_config.py  v1beta1_objective_spec.py  v1beta1_observation.py  v1beta1_operation.py  v1beta1_optimal_trial.py  v1beta1_parameter_assignment.py  v1beta1_parameter_spec.py  v1beta1_source_spec.py  v1beta1_suggestion.py  v1beta1_suggestion_condition.py  v1beta1_suggestion_list.py  v1beta1_suggestion_spec.py  v1beta1_suggestion_status.py  v1beta1_trial.py  v1beta1_trial_assignment.py  v1beta1_trial_condition.py  v1beta1_trial_list.py  v1beta1_trial_parameter_spec.py  v1beta1_trial_source.py  v1beta1_trial_spec.py  (+2 more)
kubeflow/optimizer/utils/: utils.py
kubeflow/trainer/: README.md  __init__.py  pyproject.toml
