[project]
name = "optimizer"
version = "0.18.0rc0"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
description = "Katib Python SDK for APIVersion v1beta1"
keywords = ["kubeflow", "optimizer", "model training", "katib", "ai"]
classifiers = [
        "Intended Audience :: Developers",
        "Intended Audience :: Education",
        "Intended Audience :: Science/Research",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3 :: Only",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
        "License :: OSI Approved :: Apache Software License",
        "Operating System :: OS Independent",
        "Topic :: Scientific/Engineering",
        "Topic :: Scientific/Engineering :: Artificial Intelligence",
        "Topic :: Software Development",
        "Topic :: Software Development :: Libraries",
        "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "certifi>=14.5.14",
    "grpcio>=1.64.1",
    "kubeflow-training==1.9.0",
    "kubernetes>=27.2.0",
    "protobuf>=4.21.12,<5",
    "setuptools>=21.0.0",
    "six>=1.10",
    "urllib3>=1.15.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["kubeflow"]


[tool.hatch.metadata]
allow-direct-references = true