[project]
name = "trainer"
requires-python = ">=3.10"
dynamic = ["version"]
authors = [
  { name = "The Kubeflow Authors", email = "kubeflow-discuss@googlegroups.com" },
]
license = { file = "LICENSE" }
description = "Kubeflow Python SDK to manage ML workloads and to interact with Kubeflow APIs."
readme = "README.md"
keywords = ["kubeflow", "trainer", "model training", "llm", "ai"]
classifiers = [
  "Intended Audience :: Developers",
  "Intended Audience :: Education",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "kubernetes>=27.2.0",
    "pydantic>=2.10.0",
]

[project.urls]
Homepage = "https://github.com/kubeflow/trainer"
Documentation = "https://www.kubeflow.org/docs/components/trainer/"
Source = "https://github.com/kubeflow/trainer"

[tool.hatch.build.targets.wheel]
packages = ["kubeflow"]

[tool.hatch.version]
path = "__init__.py"

[tool.hatch.metadata]
allow-direct-references = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
